[gd_scene load_steps=8 format=3 uid="uid://dyuuhj5ywutfp"]

[ext_resource type="Script" path="res://script/creditos.gd" id="1_556cm"]
[ext_resource type="VideoStream" path="res://tudo/Videos/creditos.ogv" id="1_ii17k"]
[ext_resource type="Texture2D" uid="uid://bp8ma4dqka1s1" path="res://tudo/Botoes/botao.png" id="2_vcqyh"]
[ext_resource type="Texture2D" uid="uid://cw4bqmy8mkmgt" path="res://tudo/Botoes/botaoAoClicar.png" id="3_70y13"]
[ext_resource type="Texture2D" uid="uid://dyac54buuv0pk" path="res://tudo/Botoes/BotaoClique.png" id="4_a6gv1"]
[ext_resource type="FontFile" uid="uid://chye5x60sbhrh" path="res://tudo/fonts/BRITANIC.TTF" id="5_gsbar"]
[ext_resource type="AudioStream" uid="uid://cncxsbo7uc0wl" path="res://tudo/sons/musicaDaDancaCazumba.mp3" id="7_jnaa7"]

[node name="creditos" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_556cm")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 362.0
offset_bottom = 644.0
stream = ExtResource("1_ii17k")
autoplay = true
expand = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(175.92, 318.6)
scale = Vector2(0.392072, 0.39925)

[node name="botao1" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 557.0
offset_right = 325.0
offset_bottom = 635.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("2_vcqyh")
texture_pressed = ExtResource("3_70y13")
texture_hover = ExtResource("4_a6gv1")

[node name="Label" type="Label" parent="botao1"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 217.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("5_gsbar")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jnaa7")

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="botao1" to="." method="_on_botao_1_pressed"]
